gobmkida/c2/attack3
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack3/src/engine/reading.c:3401:29: error: use of undeclared identifier 'byte_9B389F'
|| v16 == ( unsigned __int8)byte_9B389F[v18] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack3/src/engine/reading.c:3402:29: error: use of undeclared identifier 'byte_9B388C'
|| v16 == ( unsigned __int8)byte_9B388C[v18] 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack3/src/obj/1/reading.o] Error 1
